# PDF_reader

./: .env.example  .flake8  .gitignore  Algorithm.txt  LICENSE  MyPdfMiner.py  MyPdfMuPDF.py  MyPdfPlumber copy.py  MyPdfPlumber.py  README.md  Save.py  algoritmo.txt  api.py  config.json  delete.py  doc_type.json  pyproject.toml  requirements-dev.txt  valida.py
.github/workflows/: ci.yml
PdfExtractor/: PdfExtractor.cs  doc_type.json
PdfExtractor.Tests/: ConfigEditorTests.cs  ConfigLoaderTests.cs  JsonSaverTests.cs  PdfExtractor.Tests.csproj  PdfExtractor.Tests.sln  PdfProcessorTests.cs
PdfExtractor/Moldels/: BlockConfig.cs  DocumentTypeConfig.cs  ExtractedBlock.cs  ExtractedStructure.cs
PdfExtractor/Services/: BlockDetector.cs  ConfigEditor.cs  ConfigLoader.cs  JsonSaver.cs  PdfProcessor.cs
PdfExtractorTest/: PdfExtractorTest.csproj  Program.cs
PdfExtractorTest/config/: doc_types.json
pdf_batch_extractor/: __init__.py  bootstrap.py
pdf_batch_extractor/application/: cleanup_output.py  config.py  generate_doc_type.py  ports.py  process_pdf_batch.py
pdf_batch_extractor/domain/: services.py
pdf_batch_extractor/entrypoints/: cleanup_output.py  compare_outputs.py  generate_doc_type.py  process_pdf.py
pdf_batch_extractor/infrastructure/: config_loader.py
pdf_batch_extractor/infrastructure/extractors/: mupdf_block_extractor.py  pymupdf_extractor.py
pdf_batch_extractor/infrastructure/writers/: __init__.py  xml_writer.py
pdf_reader/: __init__.py  bootstrap.py
pdf_reader/application/: cleanup_output.py  compare_outputs.py  config.py  generate_doc_type.py  ports.py  process_pdf_batch.py
pdf_reader/domain/: models.py  services.py
pdf_reader/entrypoints/: _cli.py  cleanup_output.py  compare_outputs.py  generate_doc_type.py  process_pdf.py
pdf_reader/infrastructure/: config_loader.py
pdf_reader/infrastructure/extractors/: mupdf_block_extractor.py  pymupdf_extractor.py
pdf_reader/infrastructure/writers/: xml_writer.py
tests/: test_api.py  test_architecture.py  test_config.py  test_mupdf_block_extractor.py  test_mypdfmupdf.py
