[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-batch-extractor"
version = "0.1.0"
description = "Structured PDF extraction pipeline for block-based document parsing."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "MGsBueno" },
]
keywords = ["pdf", "parser", "xml", "pymupdf", "cli"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
  "pymupdf==1.27.2.2",
]

[project.urls]
Homepage = "https://github.com/MGsBueno/pdf-batch-extractor"
Repository = "https://github.com/MGsBueno/pdf-batch-extractor"
Issues = "https://github.com/MGsBueno/pdf-batch-extractor/issues"

[project.scripts]
pdf-batch-extractor = "pdf_batch_extractor.entrypoints.process_pdf:main"
pdf-batch-extractor-process = "pdf_batch_extractor.entrypoints.process_pdf:main"
pdf-batch-extractor-generate-doc-type = "pdf_batch_extractor.entrypoints.generate_doc_type:main"
pdf-batch-extractor-compare-outputs = "pdf_batch_extractor.entrypoints.compare_outputs:main"
pdf-batch-extractor-cleanup-output = "pdf_batch_extractor.entrypoints.cleanup_output:main"

[tool.setuptools.packages.find]
include = ["pdf_batch_extractor*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

